src/test/deca/context/invalid/created/testPass2/doubleDeclParam.deca
// Description : Declaration de deux parametres avec le même nom
//   
//
// Résultats :
//    Erreur contextuelle
//    Ligne 10:  DoubleParameterDeclarationException: The parameter couldn't be declared because it has already been defined.

class A {
    int x;
    void setX(int x, int x){
        
    }
}